Chapter 10 - Labs/managedK8s/test-mongodb-ingressrule.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mongodb-express
spec:
  ingressClassName: nginx
  rules:
  - host: mongodb-express.itfellasgroup.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mongo-express-service
            port: 
              number: 8081
